# decrypt-pdf

./: LICENSE  README.md  pyproject.toml
src/decrypt_pdf/: cli.py
